<resources>
    <string name="app_name">Know Your Government</string>
    <string name="seperator">seperator</string>
    <string name="separator">separator</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered by</string>
    <string name="google_civic">Google Civic</string>
    <string name="information_api">Information API</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="officialimage">officialImage</string>
    <string name="partyimage">partyImage</string>
    <string name="facebookbutton">facebookButton</string>
    <string name="twitterbutton">twitterButton</string>
    <string name="youtubebutton">youtubeButton</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
</resources>